# tidypandas

./: .Rhistory  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rmd  Untitled.ipynb  example.ipynb  pyproject.toml  requirements.txt  setup.py  utils.py  version.py
.github/: test_suite.yml
.github/workflows/: test_suite.yml
docs/: Introduction.ipynb  Makefile  Untitled.ipynb  analyzing_nycflights13.html  analyzing_nycflights13.rmd  conf.py  example.ipynb  index.md  make.bat  requirements.txt  tour.html  tour.md  tour.rmd  tp_pres.html  tp_pres.rmd  using_tidypandas.html  using_tidypandas.md  using_tidypandas.rmd
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  index.doctree  tour.doctree  using_tidypandas.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/tidypandas/: index.doctree
docs/_build/doctrees/autoapi/tidypandas/_unexported_utils/: index.doctree
docs/_build/doctrees/autoapi/tidypandas/format/: index.doctree
docs/_build/doctrees/autoapi/tidypandas/series_utils/: index.doctree
docs/_build/doctrees/autoapi/tidypandas/tidy_accessor/: index.doctree
docs/_build/doctrees/autoapi/tidypandas/tidy_utils/: index.doctree
docs/_build/doctrees/autoapi/tidypandas/tidyframe_class/: index.doctree
docs/_build/doctrees/autoapi/tidypandas/tidyselect/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tour.html  using_tidypandas.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tidypandas/: _unexported_utils.html  format.html  series_utils.html  tidy_accessor.html  tidy_utils.html  tidyframe_class.html  tidyselect.html
docs/_build/html/_sources/: tour.md.txt  using_tidypandas.md.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/tidypandas/: index.html
package_tidypandas/: __init__.py  check_convert.py  examples.py  importable.py  test_tidypandas.py  tidyDataFrame.py  tidyGroupedDataFrame.py  tidy_helpers.py  tidy_utils.py  tidypandas.py  tidypredicates.py  tutorial.py
scripts/: boilerplate-cli
src/tidypandas/: __init__.py  _unexported_utils.py  examples.py  format.py  series_utils.py  tidy.py  tidyDataFrame.py  tidy_accessor.py  tidy_helpers.py  tidy_utils.py  tidyframe_class.py  tidypandas.py  tidyselect.py  wip.py
tests/: test_tidypandas.py
tidypandas/: _unexported_utils.py  tidyDataFrame.py  tidyGroupedDataFrame.py  tidy_helpers.py  tidy_utils.py  tidypandas.py  tutorial.py  wip.py
(+15 files in other folders)
