[tool.poetry]
name = "tidypandas"
version = "0.1.0"
description = "A tidyverse inspired wrapper over Pandas Dataframe"
authors = ["Srikanth K S"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
collections-extended = "^2.0.2"
skimpy = "^0.0.5"

[tool.poetry.dev-dependencies]
myst-nb = {version = "^0.13.2", python = "^3.8"}
sphinx-autoapi = "^1.8.4"
pytest = "^7.1.1"
palmerpenguins = "^0.1.4"
numpydoc = "^1.2.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
